WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142049
bmalloc: Refactored SegregatedFreeList and BoundaryTag::init
https://bugs.webkit.org/show_bug.cgi?id=142049
Summary
bmalloc: Refactored SegregatedFreeList and BoundaryTag::init
Geoffrey Garen
Reported
2015-02-26 11:48:33 PST
bmalloc: Refactored SegregatedFreeList and BoundaryTag::init
Attachments
Patch
(37.09 KB, patch)
2015-02-26 11:50 PST
,
Geoffrey Garen
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-02-26 11:50:00 PST
Created
attachment 247435
[details]
Patch
WebKit Commit Bot
Comment 2
2015-02-26 11:51:34 PST
Attachment 247435
[details]
did not pass style-queue: ERROR: Source/bmalloc/bmalloc/VMHeap.cpp:26: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/bmalloc/bmalloc/FreeList.cpp:26: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/bmalloc/bmalloc/FreeList.cpp:28: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 3 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2015-02-26 12:05:30 PST
Committed
r180693
: <
http://trac.webkit.org/changeset/180693
>
Csaba Osztrogonác
Comment 4
2015-02-26 12:42:23 PST
(In reply to
comment #3
)
> Committed
r180693
: <
http://trac.webkit.org/changeset/180693
>
mac build fixed by
http://trac.webkit.org/changeset/180694
Csaba Osztrogonác
Comment 5
2015-02-26 12:42:44 PST
(In reply to
comment #3
)
> Committed
r180693
: <
http://trac.webkit.org/changeset/180693
>
cmake build fixed by
http://trac.webkit.org/changeset/180695
Csaba Osztrogonác
Comment 6
2015-02-26 12:47:34 PST
Just out of curiosity, why is it funny to break the build, because you don't have 5-10 minutes for EWS bots? And one more question: Is the WK2 owner model is valid from the brand new bmalloc too? If no, please don't break the build. Thanks.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug