Source/bmalloc/bmalloc/SegregatedFreeList.h
@@ -26,8 +26,7 @@
 #ifndef SegregatedFreeList_h
 #define SegregatedFreeList_h
 
-#include "LargeObject.h"
-#include "Vector.h"
+#include "FreeList.h"
 #include <array>
 
 namespace bmalloc {
@@ -58,14 +57,9 @@ public:
     LargeObject takeGreedy(size_t);
     
 private:
-    typedef Vector<Range> List;
+    FreeList& select(size_t);
 
-    List& select(size_t);
-    LargeObject take(List&, size_t);
-    LargeObject take(List&, size_t alignment, size_t, size_t unalignedSize);
-    LargeObject takeGreedy(List&, size_t);
-
-    std::array<List, 19> m_lists;
+    std::array<FreeList, 19> m_freeLists;
 };
 
 } // namespace bmalloc
